Backend cleanup: simplify code and remove unused methods